--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "js-sha256": "^0.9.0",
+    "jwt-then": "^1.0.1",
     "mongoose": "^6.3.1"
   }
 }
