--- a/Services/package.json
+++ b/Services/package.json
@@ -19,10 +19,14 @@
   },
   "homepage": "https://github.com/HungLe051902/AppChat#readme",
   "dependencies": {
+    "axios": "^0.27.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "js-sha256": "^0.9.0",
     "jwt-then": "^1.0.1",
-    "mongoose": "^6.3.1"
+    "mongoose": "^6.3.1",
+    "socket.io": "^4.5.0",
+    "sweetalert2": "^11.4.9"
   }
 }
